@@ -74,6 +74,13 @@
             <div id="close-button" class="no-select"><span class="fa fa-times"></span></div>
         </div>
     </div>
+    <div id="top-nav-heading-status_bar" class="no-select">
+            <div id="top-nav-heading-text">Search Results</div>
+            <div id="top-nav-back-close-btn-wrapper" class="back-close-btn-wrapper">
+                <div id="top-nav-back-button" class="no-select"><span class="fa fa-arrow-left"></span></div>
+                <div id="top-nav-close-button" class="no-select"><span class="fa fa-times"></span></div>
+            </div>
+        </div>
     <!---------------------------------Top-Nav-Search-Results---------------------------------->
     <div id="top-nav-search-content">
         <div id="top-nav-search-results">
